vgd-854 - Fixed a bug where the playlist was still visible even though the playlist was disabled

--- a/src/styles/components/playlist.scss
+++ b/src/styles/components/playlist.scss
@@ -44,7 +44,7 @@
         width: calc(100% - 12px);
         padding: 0;
         margin: 0;
-        overflow-y: auto;
+        overflow: hidden;
         li {
             position: relative;
             display: flex;
@@ -162,13 +162,14 @@
 }
 
 // Todo: Playlist briefly appears on initial load... ugly.
-.plyr--playlist-active {
+.plyr--playlist-initial {
     .plyr__playlist {
         visibility: visible;
     }
 }
 
-.plyr--video:not(.plyr--hide-controls) {
+// When the playlist is displayed
+.plyr--playlist-enabled:not(.plyr--hide-controls) {
     .plyr__playlist {
         visibility: visible;
         &:before {
@@ -186,50 +187,54 @@
             transition: opacity 1s linear;
             transition-delay: 1s;
         }
-        ul li {
-            span {
-                opacity: 1;
-                transition: opacity 0.1s linear;
-                transition-delay: 1s;
-            }
-            &:before {
-                transform: scaleX(1);
-                transition: transform 0.2s cubic-bezier(.51,.92,.24,1.15);
-            }
-            // Todo: write some SASS logic for this.
-            &:nth-child(1):before {
-                transition-delay: 0.6s;
-            }
-            &:nth-child(2):before {
-                transition-delay: 0.65s;
-            }
-            &:nth-child(3):before {
-                transition-delay: 0.7s;
-            }
-            &:nth-child(4):before {
-                transition-delay: 0.75s;
-            }
-            &:nth-child(5):before {
-                transition-delay: 0.8s;
-            }
-            &:nth-child(6):before {
-                transition-delay: 0.85s;
-            }
-            &:nth-child(7):before {
-                transition-delay: 0.9s;
-            }
-            &:nth-child(8):before {
-                transition-delay: 0.95s;
-            }
-            &:nth-child(n+9) {
-                transition-delay: 1s;
+        ul {
+            overflow-y: auto;
+            -webkit-overflow-scrolling: touch;
+            li {
+                span {
+                    opacity: 1;
+                    transition: opacity 0.1s linear;
+                    transition-delay: 1s;
+                }
+                &:before {
+                    transform: scaleX(1);
+                    transition: transform 0.2s cubic-bezier(.51,.92,.24,1.15);
+                }
+                // Todo: write some SASS logic for this.
+                &:nth-child(1):before {
+                    transition-delay: 0.6s;
+                }
+                &:nth-child(2):before {
+                    transition-delay: 0.65s;
+                }
+                &:nth-child(3):before {
+                    transition-delay: 0.7s;
+                }
+                &:nth-child(4):before {
+                    transition-delay: 0.75s;
+                }
+                &:nth-child(5):before {
+                    transition-delay: 0.8s;
+                }
+                &:nth-child(6):before {
+                    transition-delay: 0.85s;
+                }
+                &:nth-child(7):before {
+                    transition-delay: 0.9s;
+                }
+                &:nth-child(8):before {
+                    transition-delay: 0.95s;
+                }
+                &:nth-child(n+9) {
+                    transition-delay: 1s;
+                }
             }
         }
     }
 }
 
-// When controls are hidden
-.plyr--video.plyr--hide-controls {
+// When the playlist is hidden
+.plyr--playlist-enabled.plyr--hide-controls {
     .plyr__playlist {
         &:before {
             transform: scaleX(0);
